--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
   <div class="header-center">
     <ul class="nav-list">
       <li><a (click)="navigation.goToBanner()">Banner</a></li>
-      <li><a (click)="navigation.goToEspecialidades()">Especialidades</a></li>
+      <li><a (click)="navigation.goToEspecialidades()">Principais tratamentos</a></li>
       <li><a (click)="navigation.goToSobre()">Sobre</a></li>
       <li><a (click)="navigation.goToLocalizacao()">Localização</a></li>
       <li><a routerLink="/blog">Blog</a></li>
