--- a/src/app/components/specialties/specialties.component.html
+++ b/src/app/components/specialties/specialties.component.html
@@ -1,4 +1,4 @@
-<h2>Principais tratamentos</h2>
+<h2 id="especialidades">Principais tratamentos</h2>
 
 <ul class="grid">
   <li *ngFor="let item of specialties">
