refatorando o código e ajustando detalhes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,15 +2,19 @@
 <main class="container">
   <app-banner></app-banner>
 
-  <section class="especialidades">
+  <section class="specialties">
     <app-specialties></app-specialties>
   </section>
 
-  <section class="sobre">
-    <app-sobre></app-sobre>
+  <section class="about">
+    <app-about></app-about>
   </section>
 
-  <section class="localizacao">
-    <app-localizacao></app-localizacao>
+  <section class="clinic-carousel">
+    <app-clinic-carousel></app-clinic-carousel>
+  </section>
+
+  <section class="localization">
+    <app-location></app-location>
   </section>
 </main>
