--- a/src/app/components/clinic-carousel/clinic-carousel.component.html
+++ b/src/app/components/clinic-carousel/clinic-carousel.component.html
@@ -1,5 +1,5 @@
 <div class="carousel-container">
-    <section id="sobre">
+    <section id="about">
     <h2>Clínicas Parceiras</h2>
     <p>Conheça o espaço das nossas clínicas, planejado para oferecer conforto e bem-estar em cada detalhe.</p>
     </section>
@@ -10,7 +10,7 @@
   >
     <img *ngFor="let img of images" [src]="img" alt="Imagem do carrossel" />
   </div>
-
+  
   <!-- Botões de navegação -->
   <button class="carousel-btn prev" (click)="prevSlide()">&#10094;</button>
   <button class="carousel-btn next" (click)="nextSlide()">&#10095;</button>
