--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
       <li><a (click)="navigation.goToEspecialidades()">Principais tratamentos</a></li>
       <li><a (click)="navigation.goToSobre()">Sobre</a></li>
       <li><a (click)="navigation.goToLocalizacao()">Localização</a></li>
-      <li><a routerLink="/blog">Blog</a></li>
+      <li><a (click)="navigation.goToBlog()" routerLink="/blog">Blog</a></li>
     </ul>
   </div>
 
@@ -20,7 +20,7 @@
     <a href="https://www.instagram.com/dra.anacarolinamenezes/" target="_blank" rel="noopener noreferrer">
       <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png" alt="Instagram" class="icon" />
     </a>
-    <a href="https://wa.me/62992626875" target="_blank" rel="noopener noreferrer">
+    <a href="https://wa.me/5562992626875?text=Olá!%20Gostaria%20de%20agendar%20uma%20consulta." target="_blank" rel="noopener noreferrer">
       <img src="https://cdn-icons-png.flaticon.com/512/3670/3670051.png" alt="WhatsApp" class="icon" />
     </a>
   </div>
